--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,10 @@
+<!--
+=========================================================
+* KanbanWeb.cl - Diseño y Desarrollo Web
+=========================================================
+* Product Page: https://www.kanbanweb.cl/
+=========================================================
+ -->
 <!doctype html>
 <html lang="es">
 <head>
